--- a/madlibs.html
+++ b/madlibs.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <script>
-    var noun = "cookie";
-    var adjective = "plain";
-    var adverb = "terribly";
-    var verb = "running";
+    var noun = prompt("Enter a noun..."); //this version includes user submitted values
+    var adjective = prompt("Enter a adjective...") ;
+    var adverb = prompt("Enter a adverb...");
+    var verb = prompt("Enter a verb...");
 
     console.log("On a tropical " + noun + ",");
     console.log("Underneath a " + adjective + " lava moon.");
